Fix display on mobile.

--- a/src/components/guestCallout/styles.module.css
+++ b/src/components/guestCallout/styles.module.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 997px) {
+@media screen {
   .authorCalloutWrapper {
     display: flex;
     justify-content: center;
